# advent-of-code

./: .flake8  .gitignore  .pylintrc  Makefile
.github/: README.md
2015/: day01.py  day02.py
2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day11_visual.py  day12.py  day12_complex.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2020/day01/: day01.py
2020/day02/: day02.py
2020/day03/: day03.py
2020/day04/: day04.py
2020/day05/: day05.py
2020/day06/: day06.py
2020/day07/: day07.py
common/: setup.cfg  setup.py  template.py
common/aoc/: __init__.py  puzzle.py
