[metadata]
name = aoc
version = 1.0.0
description = My Advent-Of-Code common utilties

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    advent-of-code-data
    argparse
    pygame

[options.extras_require]
test =
    flake8
    pylint

[pylint.'MESSAGES CONTROL']

[flake8]
